# llm_serving_practice

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/model_profiles/: aggressive.yaml
configs/prompts/: prompt_200.txt
docs/: milestone4-5-guide.md  milestone6-7-guide.md  plan.md  run-guide.md  vllm-serve-args.md
experiments/runs/: locust_2026-02-04_221557_report.html  locust_2026-02-04_221557_stats.csv  locust_2026-02-05_061457_report.html  locust_2026-02-05_061457_stats.csv  locust_2026-02-05_061457_stats_history.csv  locust_2026-02-05_081415_report.html  locust_2026-02-05_083755_report.html  locust_2026-02-05_083755_stats_history.csv  locust_2026-02-05_083957_report.html  locust_2026-02-05_083957_stats.csv  locust_2026-02-05_084200_stats.csv  locust_2026-02-05_091216_report.html  locust_2026-02-05_091216_stats_history.csv
infra/compose/: docker-compose.yml  prometheus.yml
loadtest/: README.md  locustfile.py
loadtest/scenarios/: __init__.py
scripts/: gateway.py  policies.py  run_02_management.sh  run_03_tests.sh  run_gateway.sh  run_monitoring.sh  run_scale_to_zero_demo.sh  run_vllm_worker.sh  supervisor.py  worker_process.py
v1/docs/: milestone3-guide.md  plan.md
v1/scripts/: gateway.py  run_01_services.sh  run_admission_test.sh  run_batch_abtest.sh  run_gateway.sh  run_loadtest.sh  smoke_test.sh  tune_grid.py
v2/: README.md
v2/docs/: run-guide-v2.md
v2/k8s/: gateway-deployment.yaml  gateway-hpa.yaml  gateway-service.yaml  namespace.yaml  worker-deployment.yaml  worker-hpa.yaml  worker-service.yaml
v2/scripts/: build_images.sh  (+1 more)
(+34 files in other folders)
